# chinese-postman-problem

./: .gitignore  CMakeLists.txt  README.md  exploration.xml  package.xml
src/: opencv_utilities.h  utilities.cpp  utilities.h
src/cpp_solver/: CMakeLists.txt  opencv_utilities.cpp  utilities.h
src/cpp_solver/graph/: graph_factory.cpp  graph_utils.h
src/cpp_solver/paths/: network_flow.cpp  network_flow.h
src/cpp_solver/routing/: branch_bound.cpp  branch_bound.h  eulerian_extension.h
src/cpp_solver/visualization/: opencv_utilities.h
src/flow/: network_flow.cpp  network_flow.h
src/graph/: graph.cpp  graph.h  graph_factory.cpp  graph_factory.h  graph_utils.cpp  graph_utils.h
src/paths/: network_flow.cpp  shortest_paths.cpp  shortest_paths.h
src/ros_exploration_plugin/: CMakeLists.txt  cpp_exploration.project  cpp_exploration.xml
src/ros_exploration_plugin/launch/: exploration.launch
src/ros_exploration_plugin/param/: exploration.rviz  navigator.yaml
src/ros_exploration_plugin/src/: ChinesePostmanPlanner.cpp  ChinesePostmanPlanner.h  cpp_exploration_plugin.cpp  exploration_plugins.cpp
src/ros_exploration_plugin/world/: autolab.yaml
src/routing/: branch_bound.cpp  branch_bound.h  eulerian_extension.cpp  eulerian_extension.h  extension_heuristics.cpp  hungarian.cpp  network_flow.cpp  routing_problem.cpp  routing_problem.h  simmetry_heuristic.cpp
src/test/: CMakeLists.txt  benchmark.cpp  create_graph.cpp  routing_test.cpp
